# RayTracerChallenge

./: CMakeLists.txt  README.md
apps/first/: CMakeLists.txt
src/: CMakeLists.txt
src/base/: CMakeLists.txt  foo.cpp
src/core/: CMakeLists.txt  bar.cpp
src/math/: CMakeLists.txt
tests/: CMakeLists.txt
tests/UnitTests/: CMakeLists.txt
tests/UnitTests/base/: CMakeLists.txt  test_base.cpp
tests/UnitTests/core/: CMakeLists.txt  test_core.cpp
